White space issue has been solved

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 /* GENERAL */
 
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 * {
@@ -438,4 +446,8 @@ footer p {
 
 .mail{
   text-align: center;
+}
+
+hr{
+  margin: 5px 0 5px 0;
 }
